# quickjs-cmake

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
template/: CMakeLists.txt  README.md  main.c
